# pulchra

./: .gitignore  CMakeLists.txt  README.md  README.rst  make_binder.sh  make_bindings_via_cmake.py  pyproject.toml  setup.py
.github/workflows/: pip.yml  wheels.yml
bindings/python/: pulchra_bindings.cpp  pypulchra_bindings.cpp
pypulchra/: __init__.py  __init__.pyi  pulchra.pyi
src/: pulchra.hpp
src/cpp/: pulchra.hpp
src/python/: pypulchra_bindings.cpp
src/python/pypulchra/: __init__.py
src/python/tests/: test.py
tests/: test.py
